# DL2_Save_Editor

./: .conform.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommonlyAskedQuestions.md  LICENSE  README.md  SECURITY.md  Tutorial.md  index.html
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  conform.yml  draft.yml  main.yml  release.yml
assets/: index-1b2c12df.js  index-e428ad1c.css
save-editor/: package-lock.json  package.json
save-editor/src-tauri/: Cargo.toml  tauri.conf.json
savegame-editor/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
savegame-editor/src/: App.css  App.tsx  index.css  styles.css
savegame-editor/src-tauri/: .gitignore  2  Cargo.toml  saves - Shortcut.lnk  tauri.conf.json
savegame-editor/src-tauri/CRC_Bypass/: CRCBypass.asi
savegame-editor/src-tauri/Caz_Outpost/Zombies Can See You/Modded Legend Level 1 Varients/: Read Me.txt
savegame-editor/src-tauri/Caz_Outpost/Zombies Can See You/Modded Varients/: Read Me.txt
savegame-editor/src-tauri/Caz_Outpost/Zombies Can See You/Modded Varients/Mod Save With Speed/: save_main_2.sav.bak
savegame-editor/src-tauri/Caz_Outpost/Zombies Cant See You/Normal Legend Level 1 Varients/: Read Me.txt
savegame-editor/src-tauri/Caz_Outpost/Zombies Cant See You/Normal Varients/: Read Me.txt
savegame-editor/src-tauri/Hawks_Outpost/Christmas/: christmas.sav  save.json
savegame-editor/src-tauri/Hawks_Outpost/Endgame/: save.json
savegame-editor/src-tauri/Hawks_Outpost/Ghost/: ghost.sav  save.json
savegame-editor/src-tauri/Hawks_Outpost/Spooky/: christmas.sav
savegame-editor/src-tauri/IDs/: Ammo.txt  Cash.txt  Collectable.txt  CraftComponent.txt  CraftPart.txt  Equipment.txt  EvolvingItem.txt  Firearm.txt  Flashlight.txt  InventoryItem.txt  ItemBundle.txt  Lockpick.txt  LootPack.txt  Medkit.txt  Melee.txt  Other.txt  OutfitPart.txt  Powerup.txt  Throwable.txt  ThrowableLiquid.txt  Token.txt  Uncategorized.txt  Valuable.txt  VehicleUpgrade.txt  Voucher.txt  new_item_ids.txt
savegame-editor/src-tauri/IDs (copy)/: Flashlight.txt  LootPack.txt  Medkit.txt  Other.txt  OutfitPart.txt  SurvivorPack.txt  SyringeAntizin.txt  Uncategorized.txt  VehicleUpgrade.txt  Voucher.txt
savegame-editor/src-tauri/Lists/: not_shareable.txt
savegame-editor/src-tauri/Patched_Items/: mchawk.csv  not_dropable.txt
savegame-editor/src-tauri/capabilities/: default.json  migrated.json
savegame-editor/src-tauri/icons/: icon.icns
savegame-editor/src-tauri/src/: file_analizer.rs  id_fetcher.rs  lib.rs  logger.rs  main.rs  struct_data.rs  test_saves.rs
savegame-editor/src-tauri/src/save_logic/: bypass_crc.rs  file_analyser.rs  id_fetcher.rs  mod.rs  patched_items_fetcher.rs  save_outpost.rs  struct_data.rs  test_saves.rs
savegame-editor/src/models/: idData.ts  item-templates.json  models.ts  save-models.ts  settings-manager.tsx  settings-model.ts  settings-schema.ts
savegame-editor/src/pages/: backpack-page.tsx  campaign-page.tsx  debug-page.tsx  ids-page.tsx  info-page.tsx  inventory-page.tsx  knowledge-vault.tsx  landing-page.tsx  main-page.tsx  outpost-page.tsx  (+7 more)
(+70 files in other folders)
