[package]
name = "savegame-editor"
version = "1.0.8"
description = "A Dying Light 2 Save Editor. Allows to edit inventory and skills."
authors = ["Marcel-TO", "zCaazual"]
license = "MIT License"
repository = "https://github.com/Marcel-TO/DL2_Save_Editor.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-store = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.27"
regex = "1.11.1"
dotenv = "0.15.0"
flate2 = "1.0.33"
term = "1.0.0"
term_size = "0.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
