[package]
name = "savegame-editor"
version = "1.0.9"
description = "A Dying Light 2 Save Editor. Allows to edit inventory and skills."
authors = ["Marcel-TO", "zCaazual"]
license = "MIT License"
repository = "https://github.com/Marcel-TO/DL2_Save_Editor.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "savegame_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
flate2 = "1.1.5"
